--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-parsers</artifactId>
+			<version>1.17</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.opencsv</groupId>
