--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.password=kkuser
-spring.datasource.username=kkuser
+spring.datasource.password=budget
+spring.datasource.username=budget
 spring.datasource.url=jdbc:mysql://192.168.1.100:3306/budget
 spring.jpa.hibernate.ddl-auto=update
